upgrade to ansible-core 2.11.0

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-stdout_callback = yaml
+# see https://docs.ansible.com/ansible/latest/collections/community/general/yaml_callback.html
+stdout_callback = community.general.yaml
 inventory = example-inventory.yml
 interpreter_python = python3
 
