--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-ansible==2.10.7         # see https://pypi.org/project/ansible/
-ansible-base==2.10.7    # see https://pypi.org/project/ansible-base/
-ansible-lint==4.3.7     # see https://pypi.org/project/ansible-lint/
+ansible-core==2.11.0    # see https://pypi.org/project/ansible-core/
+ansible-lint==5.0.8     # see https://pypi.org/project/ansible-lint/
