--- a/example-playbook.yml
+++ b/example-playbook.yml
@@ -2,54 +2,8 @@
   name: Example
   gather_facts: no
   tasks:
-    # NB before using this you MUST manually reset your switch and then set:
-    #     * System
-    #       * User Account
-    #         * New Username:     admin
-    #         * Old Password:     admin
-    #         * New Password:     admin
-    #         * Confirm Password: admin
-    #       * IP Setting
-    #         * DHCP Setting:    Disable
-    #         * IP address:      10.1.0.2
-    #         * Subnet Mask:     255.255.255.0
-    #         * Default Gateway: 10.1.0.1
-    #       * VLAN
-    #         * 802.1Q VLAN
-    #           * 802.1Q VLAN Configuration: Enable
-    #    AND your management computer should be configured as:
-    #       network:
-    #       version: 2
-    #       renderer: networkd
-    #       ethernets:
-    #         enp3s0:
-    #           link-local: []
-    #           addresses:
-    #             - 10.1.0.1/24
-    #       bridges:
-    #         br-rpi:
-    #           link-local: []
-    #           addresses:
-    #             - 10.3.0.1/24
-    #           interfaces:
-    #             - vlan.rpi
-    #       vlans:
-    #         vlan.wan:
-    #           id: 2
-    #           link: enp3s0
-    #           link-local: []
-    #           addresses:
-    #             - 192.168.1.1/24
-    #           gateway4: 192.168.1.254
-    #           nameservers:
-    #             addresses:
-    #               - 8.8.8.8
-    #               - 8.8.4.4
-    #               - 1.1.1.1
-    #         vlan.rpi:
-    #           id: 3
-    #           link: enp3s0
-    #           link-local: []
+    # NB this assumes that you have taken ownership of the switch as described
+    #    in the README.
     - name: Configure the TL-SG108E switch
       connection: local
       rgl.tp_link_easy_smart_switch.smrt_config:
