Use host interface as configuration instead of host IP and host MAC.
The communication with the switch uses UDP broadcast. Therefore, a specific IP is not required.
Replace host MAC and IP configuration options with host interface. The MAC can be read from
the interface, the IP is not required due to UDP broadcast communication.

--- a/example-playbook.yml
+++ b/example-playbook.yml
@@ -9,8 +9,7 @@
       rgl.tp_link_easy_smart_switch.smrt_config:
         username: "{{ smrt_username }}"
         password: "{{ smrt_password }}"
-        host_ip_address: "{{ smrt_host_ip_address }}"
-        host_mac_address: "{{ smrt_host_mac_address }}"
+        host_interface: "{{ smrt_host_interface }}"
         switch_mac_address: "{{ smrt_switch_mac_address }}"
         # NB undefined ports will be disabled and put in vlan 1 as untagged
         #    ports.
