--- a/example-inventory.yml
+++ b/example-inventory.yml
@@ -7,5 +7,4 @@ all:
   vars:
     smrt_username: admin
     smrt_password: HeyH0Password
-    smrt_host_ip_address: 10.1.0.1
-    smrt_host_mac_address: 08:60:6e:11:11:11
+    smrt_host_interface: enp2s0f0
